--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -10,4 +10,11 @@ form {
   flex-direction: column;
   align-items: self-start; }
 
+ul li {
+  margin-bottom: 30px; }
+
+ul a {
+  color: #000000;
+  text-decoration: none; }
+
 /*# sourceMappingURL=style.css.map */
