--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -12,3 +12,13 @@ form {
   flex-direction: column;
   align-items: self-start;
 }
+
+ul {
+  li{
+    margin-bottom: 30px;
+  }
+  a {
+    color: #000000;
+    text-decoration: none;
+  }
+}
